--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "pages": ["src/pages/"],
       "store": ["src/store/"],
       "styles": ["src/styles/"],
-      "utils": ["src/utils/"]
+      "utils": ["src/utils/"],
+      "interfaces": ["src/interfaces/"]
     },
     "allowJs": true,
     "target": "es2021",
